Migrated to latest spring boot